--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
-version: '2'
-
+---
+version: '3'
 services:
-    portainer:
-        image: portainer/portainer
-        restart: always
-        container_name: "portainer-app"
-        command: --host=unix:///var/run/docker.sock
-        ports:
-            - "9000:9000"
-        volumes:
-            - /var/run/docker.sock:/var/run/docker.sock
-            - /opt/portainer/data:/data
+  portainer:
+    image: portainer/portainer-ce:latest
+    restart: always
+    container_name: portainer
+    security_opt:
+      - no-new-privileges:true
+    ports:
+      - "8000:8000"
+      - "9443:9443"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./portainer_data:/data
